# TRP-1-Week-4-The-Brownfield-Cartographer

./: .gitignore  ACCURACY_OBSERVATIONS.md  COMPLETION_PLAN.md  FINAL_REPORT_PDF.md  INTERIM_REPORT.md  README.md  RECONNAISSANCE.md  TRP 1 Challenge Week 4_ The Brownfield Cartographer (1).md  WALKTHROUGH.md  architecture_diagram.md  context.md  finalreport.md  pyproject.toml
cartography_artifacts/codebase2/: .last_run.json  CODEBASE.md  cartography_trace.jsonl  lineage_graph.json  onboarding_brief.md
cartography_artifacts/jaffle_shop/: .last_run.json  CODEBASE.md  cartography_trace.jsonl  lineage_graph.json  module_graph.json  onboarding_brief.md
src/: cli.py  orchestrator.py
src/agents/: __init__.py  archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: dag_config_parser.py  sql_lineage.py  tree_sitter_analyzer.py
src/graph/: knowledge_graph.py
src/models/: __init__.py  edges.py  nodes.py
src/utils/: __init__.py  llm_client.py  token_budget.py
submission_bundle/: CODEBASE.md  FINAL_REPORT.html  FINAL_REPORT_PDF.md  cartography_trace.jsonl  lineage_graph.json  onboarding_brief.md
