[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brownfield-cartographer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "networkx>=3.2",
    "tree-sitter-languages>=1.10.0",
    "sqlglot>=25.0.0",
    "click>=8.1.0",
    "gitpython>=3.1.40",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
cartographer = "src.cli:main"
